# Pacer

./: .gitignore  Box.cpp  Box.xml  CMakeLists.txt  Control-Moby.config  Control-Moby.creator.user.1.3  Control-Moby.creator.user.2.5pre1  Control-Moby.files  Control-Moby.includes  Control.h  Controller.cpp  LinksColdetPlugin.cpp  LinksColdetPlugin.h  PD-controller.cpp  README  README.md  RestingContact-test.cpp  Sphere.xml  StepBezier.cpp  Visualization.cpp  build-and-test.sh  clean_data.sh  estimatefrict.cpp  hyq.urdf  hyq.xml  hyq_terrain.xml  idyn-controller.cpp  idyn.cpp  inverseKinematics.cpp  kinematics.cpp  links.urdf  links.xml  lynx-model.xml  output.cpp  regress-links-model  run-test.sh  setup.sh  simple-PD.cpp
Examples/Monopod/: CMakeLists.txt  control_moby.cc  hopper.xml  inverse_kinematics.cc  locomotion.cc  monopod.cc  monopod.h
Examples/Quadruped/: CMakeLists.txt  control_moby.cc  control_moby.cpp  default.script  heightmap.m  heightmap.mat  hurdles.script  idyn-c.script  idyn-e.script  links.xml  links1.xml  locomotion.cc  locomotion.cpp  pid.script  quadruped.cc  quadruped.cpp  quadruped.h  render.cpp  stabilization.cc  stabilization.cpp  startup-links1.xml  startup-links2.xml  startup.script  startup.xml  trot.script  variables.cc  variables.cpp  variables.h  wcpg.cc  wcpg.cpp
Examples/Quadruped/INIT/: startup-atlas.xml  startup-links-ankles.xml  startup-links1.xml  startup-links2.xml  startup-simple-biped.xml  startup.xml
Examples/Quadruped/MATHEMATICA/: linksIK.nb
Examples/Quadruped/MATLAB/: activeset.m  attractor_cycle.m  box_inertia.m  cpg.m  eval_idyn.m  eval_kin.m  heightmap.m  heightmap.mat  iit_cpg.m  myfun.m  read_data.m  test_lcp.m
Examples/Quadruped/MODELS/: articulatedBody.xml  atlas.xml  atlas_simple_shapes.sdf  atlas_simple_shapes.urdf  links-ankles.xml  links.xml  links1.xml  links2.xml  simple-biped.xml
Examples/Quadruped/SCRIPTS/: parse_all_data.bash  parse_all_data.sh  parse_data.bash  parse_data.sh  parse_perturb_data.bash  run_all_test.bash  run_test.bash
Plugin/: CMakeLists.txt
Plugin/Component/: CMakeLists.txt  README.md  camera.cpp  command.cpp  crouch.cpp  delay.cpp  eef-PID-controller.cpp  eef-data.cpp  end-effectors.cpp  error-check-builder.cpp  error-check.cpp  exit-contact.cpp  exit.cpp  forward-kinematics.cpp  gait-planner.cpp  getFeet.cpp  goForward.cpp  goto-stand.cpp  grasp.cpp  inverse-kinematics.cpp  joint-PID-controller.cpp  jump-to.cpp  jump.cpp  limits.cpp  orient-base.cpp  pick.cpp  plugin-scheduler.cpp  plugin.h  poseListener.cpp  settle.cpp  sinusoid-walk.cpp  stabilization.cpp  stand.cpp  stay.cpp  switch-gait.cpp  traj-reader.cpp  trajectory-table.cpp  waypoints.cpp  wcpg.cpp
Plugin/Component/gamepad/: CMakeLists.txt  gamepad.cpp
Plugin/Component/hardware/: arduino.cpp  dynamixel.cpp
Plugin/Component/inverse-dynamics/: CMakeLists.txt  anitescu-potra.cpp  fix-trajectory.cpp  inverse-dynamics.cpp  maximal-dissipation.cpp  no-slip.cpp  plugin.cpp  test.cpp
Plugin/Component/mc-service/: CMakeLists.txt  exchange.cpp  exchange.h  messenger.h  simple-planner.cpp  simple-robot.cpp  simple-simulation.cpp
Plugin/Component/monte-carlo-simulation/: CMakeLists.txt  Random.h  Sample.cpp  Simulate.cpp  common.h  exchange.cpp  exchange.h  perturb.cpp  print.cpp  sample-perturb.cpp  select.cpp  service.h  simulate-message.cpp  simulate.cpp
Plugin/Component/output/: CMakeLists.txt
Plugin/Simulator/: CMakeLists.txt  README.md  gazebo.cpp  moby.cpp  visualize.cpp
example/interfaces/: CMakeLists.txt  README.md  Random.h  arduino.cpp  gazebo.cpp  hardware.cpp  moby-driver.cpp  moby-motor.cpp  moby-old.cpp  moby-simple.cpp  moby.cpp  motor.cpp  simple.cpp  visualize.cpp
example/plugins/: CMakeLists.txt  Octree.h  README.md  center-of-mass.cpp  clone.cpp  crouch.cpp  delay.cpp  drive-robot.cpp  dynamic-gait-planner.cpp  eef-PID-controller.cpp  eef-data.cpp  end-effectors.cpp  error-check.cpp  exit-contact.cpp  exit.cpp  gait-planner.cpp  gamepad.cpp  goto-stand.cpp  hopper-controller-nofk.cpp  hopper-controller.cpp  ik-feet.cpp  ik_feet.cpp  inverse-dynamics.cpp  inverse-kinematics.cpp  inverse_dynamics.cpp  joint-PID-controller.cpp  jump-to.cpp  jump.cpp  keyboard.cpp  limits.cpp  orient-base.cpp  output.cpp  plugin-scheduler.cpp  plugin-template.cpp  plugin.h  pushFree-gait-planner.cpp  register-plugin  register_plugin  reset-stand-trajectory.cpp  responsive-gait-planner.cpp  (+11 more)
example/plugins/gamepad/: CMakeLists.txt  gamepad.cpp
example/plugins/hardware/: CMakeLists.txt  dynamixel.cpp
example/plugins/imu/: CMakeLists.txt  driver.cpp  driver.h  interface.cpp  interface.h
example/plugins/inverse-dynamics/: CMakeLists.txt  anitescu-potra.cpp  inverse-dynamics.cpp  maximal-dissipation.cpp  no-slip.cpp
example/plugins/monte-carlo-simulation/: CMakeLists.txt  Sample.cpp  common.h  random.h  simulate.cpp  visualize.cpp
example/plugins/output/: CMakeLists.txt  output.cpp
test/: CMakeLists.txt  clean-file.sh  parse_all_data.sh  run_all_test_sequential.sh
test/Demos/: main.cpp
test/Demos/joystick/: CMakeLists.txt  plugins.xml  vars.xml
test/Quadruped/jumping/: init.xml  model.xml  vars.xml
test/Quadruped/walking/: walk-example.xml
test/Quadruped/waypoints/: RUN.sh  links.world  model.config  model.xml
test/Quadruped/waypoints-terrain/: RUN.sh  heightmap.py  model.sdf  model.xml  test.py
test/RegressionTests/: CMakeLists.txt  RUN.sh  main.cpp  set_moby_robot_model.sh  setup-tests.sh
test/RegressionTests/falling/: checks.cpp  model.xml  plugins.xml  vars.xml
test/RegressionTests/joystick/: CMakeLists.txt  checks.cpp  main.cpp  plugins.xml  vars.xml
test/RegressionTests/jumping/: CMakeLists.txt  checks.cpp  clean-file.sh  main.cpp  model.xml  model.xml.in  plugins.xml  scheduler.xml  vars.xml  vars.xml.in
test/RegressionTests/landing/: CMakeLists.txt  README.md  model.xml  plugins.xml  test.sh
test/RegressionTests/running/: model.xml.in  plugins.xml  vars.xml
test/RegressionTests/scheduler/: checks.cpp  plugins.xml  (+1 more)
test/UnitTests/: CMakeLists.txt  main.cpp  model.xml  vars.xml
(+463 files in other folders)
